--- a/css/responsive.css
+++ b/css/responsive.css
@@ -83,8 +83,11 @@
     margin-bottom: 1rem;
   }
   .box-service {
-    min-height: 12rem;
+    min-height: 10rem;
     padding-bottom: 0;
+  }
+  .box-service .box-img {
+    margin: 1rem 0 1rem 0;
   }
   .price-list .title {
     margin-bottom: 2rem;
@@ -102,7 +105,8 @@
   .service-title .text,
   .price-title .text,
   .safepad-title .text,
-  .project-title .text {
+  .project-title .text,
+  .partners-title .text {
     font-size: 1.5rem;
     margin-bottom: 1rem;
     display: inline-block;
@@ -149,14 +153,15 @@
   .box-about {
     margin-bottom: 0.5rem;
   }
-  .box-service .box-img {
-    margin: 2rem 0 1rem 0;
-  }
+
   .box-safepad {
     padding: 0.25rem 0;
   }
   .mb_30 {
     margin-bottom: 0.5rem;
+  }
+  .project-close {
+    padding-top: 1rem;
   }
 }
 @media (max-width: 480px) {
